# library-book-rental-service

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  db_connect.py  docker-compose.yml  load_data.py  main.py  nginx.conf  pyproject.toml  requirements.txt
alembic/versions/: bf2a8e908981_makemigrations.py
app/: __init__.py  models.py
app/static/css/: mypage.css
app/static/js/: signup.js
app/templates/: _base.html  _header.html  _navbar.html  book_detail.html  login.html  main.html  mypage.html  search_list.html  signup.html
app/views/: auth.py  book_info.py  main.py  user.py
migrations/versions/: 0d919238843a_add_updated_at_field_of_review_table.py  3078640b89c3_change_user_table.py  44c0113636eb_initial_migration.py  ac4be06a2e46_move_rental_num_from_book_model_to_user_.py  b2b24cc4e012_move_rental_num_from_user_model_to_rent_.py  f700953426b8_change_rent_table.py
nginx/: default.conf  nginx.conf
