[tool.poetry]
name = "flask-library"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_library"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
sqlalchemy = "^2.0.17"
pymysql = "^1.1.0"
flask-sqlalchemy = "^3.0.5"
bcrypt = "^4.0.1"
flask-login = "^0.6.2"
cryptography = "^41.0.1"
email-validator = "^2.0.0.post2"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
