[tool.poetry]
name = "flask-library"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_library"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
sqlalchemy = "^2.0.17"
flask-sqlalchemy = "^3.0.5"
pymysql = "^1.1.0"
mysqlclient = "^2.2.0"
bcrypt = "^4.0.1"
flask-login = "^0.6.2"
flask-bcrypt = "^1.0.1"
cryptography = "^41.0.1"
email-validator = "^2.0.0.post2"
alembic = "^1.11.2"
black = "^23.7.0"
pyjwt = "^2.8.0"
flask-migrate = "^4.0.4"
flask-script = "^2.0.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
